--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 4000 -c .storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,12 +39,27 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@babel/preset-typescript": "^7.3.3",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-backgrounds": "^6.0.21",
+    "@storybook/addon-controls": "^6.0.21",
+    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-knobs": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/addon-storysource": "^6.0.21",
+    "@storybook/addon-viewport": "^6.0.21",
+    "@storybook/addons": "^6.0.21",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.8",
+    "@storybook/theming": "^6.1.8",
     "@types/jsdom": "^12.2.2",
-    "@types/mocha": "^5.2.6",
+    "@types/storybook__react": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.2.2",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
@@ -55,6 +71,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
     "prettier": "^2.2.0",
+    "react-docgen-typescript-loader": "^3.7.2",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "remotedev": "^0.2.9"
   }
 }
