--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.97",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@types/jest": "25.2.3",
     "@types/node": "14.0.5",
     "@types/react": "16.9.35",
@@ -13,6 +16,7 @@
     "mst-middlewares": "^4.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-emotion": "^10.0.0",
     "react-scripts": "3.4.1",
     "typescript": "3.9.3"
   },
